--- a/src/main/resources/static/styles/custom.css
+++ b/src/main/resources/static/styles/custom.css
@@ -196,3 +196,14 @@ table thead .sorting_desc_disabled {
 .custom-text-inverse {
     color: #555;    
 }
+
+.custom-overray {
+  opacity: .50;
+  background-color: #000;
+  width: calc(100% + 2px);
+  height: calc(100% + 2px);
+  position: absolute;
+  z-index: 5;
+  margin: -20px -20px;
+  border-radius: 3px;
+}
