--- a/src/main/resources/static/appPasteur/modules/components/reset/reset.html
+++ b/src/main/resources/static/appPasteur/modules/components/reset/reset.html
@@ -38,6 +38,20 @@
 						</td>
 						<td class="text-center"></td>
 					</tr>
+					<tr>
+						<td class="text-center">조명</td>
+						<td class="text-center">
+							<button type="button" class="btn btn-default" ng-click="xdReset('lighting')">Reset</button>
+						</td>
+						<td class="text-center"></td>
+					</tr>
+					<tr>
+						<td class="text-center">엘리베이터</td>
+						<td class="text-center">
+							<button type="button" class="btn btn-default" ng-click="xdReset('elevator')">Reset</button>
+						</td>
+						<td class="text-center"></td>
+					</tr>
 				</tbody>
 			</table>
 			
