--- a/src/main/resources/static/styles/vendor.css
+++ b/src/main/resources/static/styles/vendor.css
@@ -15981,7 +15981,7 @@ tbody.collapse.in {
     z-index: 1000;
     display: none;
     float: left;
-    min-width: 160px;
+    min-width: 250px;
     padding: 5px 0;
     margin: 2px 0 0;
     list-style: none;
@@ -15991,7 +15991,9 @@ tbody.collapse.in {
     border: 1px solid rgba(0, 0, 0, .15);
     border-radius: 4px;
     box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
-    background-clip: padding-box
+    background-clip: padding-box;
+    max-height: 500px;
+	overflow-y: auto;
 }
 .dropdown-menu.pull-right {
     right: 0;
@@ -16004,6 +16006,7 @@ tbody.collapse.in {
     background-color: #e5e5e5
 }
 .dropdown-menu>li>a {
+	margin : 3px;
     display: block;
     padding: 3px 20px;
     clear: both;
