--- a/src/main/resources/static/appPasteur/modules/components/reset/reset.html
+++ b/src/main/resources/static/appPasteur/modules/components/reset/reset.html
@@ -6,6 +6,8 @@
 	<section class="widget">
 		<div class="widget-body">
 		
+		
+		{{"views.main.Splendid!" | translate}}
 			
 			<!-- 
 				<div class="pull-left margin_left_10">
