--- a/src/main/resources/static/appPasteur/modules/components/reset/reset.html
+++ b/src/main/resources/static/appPasteur/modules/components/reset/reset.html
@@ -6,9 +6,9 @@
 	<section class="widget">
 		<div class="widget-body">
 		
-		
+		<!-- 
 		{{"views.main.Splendid!" | translate}}
-			
+			 -->
 			<!-- 
 				<div class="pull-left margin_left_10">
 					<button type="button" class="btn btn-default" ng-click="alarmCheck(-1)">alarmCheck</button>
@@ -51,6 +51,13 @@
 						<td class="text-center">엘리베이터</td>
 						<td class="text-center">
 							<button type="button" class="btn btn-default" ng-click="xdReset('elevator')">Reset</button>
+						</td>
+						<td class="text-center"></td>
+					</tr>
+					<tr>
+						<td class="text-center">UPS</td>
+						<td class="text-center">
+							<button type="button" class="btn btn-default" ng-click="xdReset('ups')">Reset</button>
 						</td>
 						<td class="text-center"></td>
 					</tr>
